[ADD] utils for fetch articles

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 Django = "^4.1.7"
 djangorestframework = "^3.14.0"
+requests = "^2.28.2"
+wikipedia-api = "^0.5.8"
 
 
 [build-system]
