--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ Django = "^4.1.7"
 djangorestframework = "^3.14.0"
 requests = "^2.28.2"
 wikipedia-api = "^0.5.8"
+google-cloud-language = "^2.9.1"
+numpy = "^1.24.2"
 
 [tool.poetry.group.dev.dependencies]
 django-webpack-loader = "^1.8.1"
