--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "jquery": "^1.12.0",
+    "turn.js": "^1.0.5",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "webpack-bundle-tracker": "^1.8.1"
