--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ wikipedia-api = "^0.5.8"
 google-cloud-language = "^2.9.1"
 numpy = "^1.24.2"
 djangorestframework-simplejwt = "^5.2.2"
+django-extensions = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 django-webpack-loader = "^1.8.1"
