--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-cloud-language = "^2.9.1"
 numpy = "^1.24.2"
 djangorestframework-simplejwt = "^5.2.2"
 django-extensions = "^3.2.1"
+psycopg2 = "^2.9.6"
 
 [tool.poetry.group.dev.dependencies]
 django-webpack-loader = "^1.8.1"
