--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN rm -rf frontend/*
 COPY --from=npm_builder /vue/dist /srv/frontend/dist
 
 RUN pip install poetry
-RUN poetry install --only main,prod
+RUN poetry install --only main
 
 ENTRYPOINT ["poetry", "run", "/srv/docker/entrypoint.sh"]
-CMD ["gunicorn", "studymi.wsgi:application", "--bind", "0.0.0.0:8000", "--timeout", "300"]
+CMD ["gunicorn", "hackadoo.wsgi:application", "--bind", "0.0.0.0:8000", "--timeout", "300"]
