--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ numpy = "^1.24.2"
 djangorestframework-simplejwt = "^5.2.2"
 django-extensions = "^3.2.1"
 psycopg2 = "^2.9.6"
+gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 django-webpack-loader = "^1.8.1"
