try to fix nginx

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,10 +29,11 @@ services:
         restart: unless-stopped
 
     nginx:
-        build: ./nginx
+        image: nginx
         volumes:
             - static_volume:/srv/static
             - media_volume:/srv/media
+            - ./nginx/nginx.conf:/etc/nginx/conf.d:ro
         labels:
             - "traefik.enable=true"
             - "traefik.docker.network=traefik-proxy"
